<resources>
    <string name="app_name">Mines</string>
    <string name="safe">Safe</string>
    <string name="mine">Mine</string>
    <string name="choose_text">Select the size of your Mine Field</string>
    <string name="play">Play</string>
    <string name="score_text">Game History\n</string>
    <string name="new_game">New Game</string>
    <string name="board_8_by_8_10_mines">8 by 8, 10 Mines</string>
    <string name="board_12_by_16_30_mines">12 by 16, 30 Mines</string>
    <string name="board_16_by_16_40_mines">16 by 16, 40 Mines</string>
    <string name="board_16_by_30_99_mines">16 by 30, 99 Mines</string>
    <string name="custom">Custom</string>
    <string name="columns">Columns:</string>
    <string name="rows">Rows:</string>
    <string name="clickForQuietMode">CLICK FOR SILENT MODE</string>
    <string name="clickForTalkativeMode">CLICK FOR TALKATIVE MODE</string>
    <string name="no_history_yet">No game history exists</string>
    <string name="edit_history">Edit History</string>
    <string name="launch_dialog">Launch Dialog</string>
    <string name="abort_edit_history">Abort Edit History</string>
    <string name="play_again">Play Again</string>
    <string name="delete">Delete</string>
</resources>
